--- a/public/fonts/icons/ie7/ie7.css
+++ b/public/fonts/icons/ie7/ie7.css
@@ -38,5 +38,8 @@
 	*zoom: expression(this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xe60c;');
 }
 .fonticon-specialty-foodservice-equipment {
+	*zoom: expression(this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xe60e;');
+}
+.fonticon-made-italy5 {
 	*zoom: expression(this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xe60d;');
 }
