--- a/public/js/apps/products/templates/list_layout.hbs
+++ b/public/js/apps/products/templates/list_layout.hbs
@@ -1,7 +1,11 @@
 <div class="container">
   <h1>Specialty Foodservice Equipment</h1>
-</div>
-<div id="subnav-region"></div>
-<div class="container">
-  <div id="products-region"></div>
+  <div class="row">
+    <div class="col-md-3">
+      <div id="subnav-region"></div>
+    </div>
+    <div class="col-md-9">
+      <div id="products-region"></div>
+    </div>
+  </div>
 </div>
