--- a/public/js/libs/bootstrap/less/grid.less
+++ b/public/js/libs/bootstrap/less/grid.less
@@ -272,15 +272,15 @@
 // Note that `.col-lg-12` doesn't get floated on purpose—there's no need since
 // it's full-width.
 
-//@media (min-width: @screen-lg-desktop) {
-//  .container {
-//    max-width: @container-lg-desktop;
-//  }
-
-
-@media (min-width: @screen-me-desktop) {
+/*@media (min-width: @screen-lg-desktop) {
   .container {
-    max-width: @container-me-desktop;
+    max-width: @container-lg-desktop;
+  }
+*/
+
+@media (min-width: @screen-my-lg-desktop) {
+  .container {
+    max-width: @container-my-lg-desktop;
   }
 
   .col-lg-1,
