--- a/public/js/libs/bootstrap/less/variables.less
+++ b/public/js/libs/bootstrap/less/variables.less
@@ -216,8 +216,8 @@
 @screen-lg-desktop:          @screen-lg;
 
 // Me Screen
-@screen-me:                  1070px;
-@screen-me-desktop:          @screen-me;
+@screen-my-lg:                  1070px;
+@screen-my-lg-desktop:          @screen-my-lg;
 
 
 // So media queries don't overlap when required, provide a maximum
@@ -625,4 +625,4 @@
 @container-lg-desktop:        ((1140px + @grid-gutter-width));
 
 // My screen smallish         1050px
-@container-me-desktop:        ((1020px + @grid-gutter-width));
+@container-my-lg-desktop:        ((1020px + @grid-gutter-width));
