--- a/views/reale/features-part1.jade
+++ b/views/reale/features-part1.jade
@@ -2,19 +2,14 @@ section.odd
   .coffeegeek
     p.quote.
       <!--<img class="quote-left" src="/img/big-quote-left.png"/>-->
-      <span class="quotemark">&ldquo;</span>...simple, beautiful, and makes excellent espresso<span class="quotemark">&rdquo;</span>
+      &ldquo;Simple, beautiful, and makes excellent espresso&rdquo;
+      <!--<span class="quotemark">&ldquo;</span>
+      //<span class="quotemark">&rdquo;</span>-->
       <!--//<img class="quote-right" src="/img/big-quote-right.png"/>-->
     .author
       p.line-one.
-        Says... <img style="float-right" id="coffeegeek.png" src="/img/coffeegeek.png"/>
+        <img style="float-right" id="coffeegeek.png" src="/img/coffeegeek.png"/>
       p.line-two.
-        the premier espresso machine review site
-  .reale-engineers
-    p.quote.
-      ...the Reale has the exact taste and benefits of our commercial machines
-      because its designed from a commercial machine
-    .author
-      p.line-two.
-        ...our engineers only know commercial machines so when we were asked to create our first
-        home unit, we made it with the same quality parts as our commercial machines.
+        espresso machine review site
+
 
