--- a/public/css/main.less
+++ b/public/css/main.less
@@ -129,18 +129,13 @@ footer {
    Base tags 
    ========================================================================== */
 
-h1, h2, h3 {
-  line-height: 1.3;
-}
-
-html {
-  //margin:0;
-  //padding:0;
+h1, h2, h3, h4, h5, h6  {
+  font-family: proximaNova, "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-weight: normal;
 }
 
 body {
-  line-height: 1.3;
-  font-family: proximaNova, arial, 'sans-serif';
+  font-family: proximaNova, "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
 #notification-region {
@@ -812,35 +807,37 @@ body.login, body.signup {
 
 #products {
   .items {
-    overflow: auto; //collapsing margins
-    > section {
+    //overflow: auto; //collapsing margins
+    section {
       margin-top: 30px;
     }
   }
+  .item-rows {
+    padding-left: 0;
+  }
   h1 {
-    font-size: 54px;
-    font-family: lato;
-    font-weight: normal;
-    margin: 1em 0 .2em 0;
-    line-height: 1.2;
-    font-family: 'quicksandBook';
-    font-weight: normal;
+    //font-size: 54px;
+    //font-family: lato;
+    //margin: 1em 0 .2em 0;
+    //line-height: 1.2;
+    //font-family: 'quicksandBook';
+    //font-family: 'quicksandBook';
   }
   section {
     h2 {
       //color:#666;
       border-bottom: 1px solid #ccc;
-      font-size: 35px;
-      margin-bottom: 15px;
-      margin-top: 15px;
-      line-height: 1.2;
-      padding-bottom: .5em;
-      font-family: 'quicksandBook';
-      font-weight: normal;
+      //font-size: 35px;
+      //margin-bottom: 15px;
+      //margin-top: 15px;
+      //line-height: 1.2;
+      //padding-bottom: .5em;
+      //font-family: 'quicksandBook';
+      //font-weight: normal;
     }
     h3 {
-      font-family: 'quicksandBook';
-      font-weight: normal;
+      //font-family: 'quicksandBook';
+      //font-weight: normal;
     }
     h4 {
       font-size: 18px;
@@ -960,76 +957,93 @@ body.login, body.signup {
   display: block;
 }
 
-/* Subnav */
-.subnav .nav {
-  margin-bottom: 0;
+/*
+ * Side navigation
+ *
+ * Scrollspy and affixed enhanced navigation to highlight sections and secondary
+ * sections of docs content.
+ */
+
+/* By default it's not affixed in mobile views, so undo that */
+.bs-sidebar.affix {
+  position: static;
 }
 
-.subnav .nav > li > a {
-  margin: 0;
-  padding: 9px;
-  font-size: 15px;
-}
-.subnav .nav > .active > a,
-.subnav .nav > .active > a:hover {
-  background-color: #f7f7f7;
-  padding-left: 13px;
-  color: #777;
-  background-color: #e9e9e9;
-  border-right-color: #ddd;
-  border-left: 0;
-  -webkit-box-shadow: inset 0 3px 5px rgba(0,0,0,.05);
-     -moz-box-shadow: inset 0 3px 5px rgba(0,0,0,.05);
-          box-shadow: inset 0 3px 5px rgba(0,0,0,.05);
+/* First level of nav */
+.bs-sidenav {
+  margin-top: 30px;
+  margin-bottom: 30px;
+  padding-top:    10px;
+  padding-bottom: 10px;
+  text-shadow: 0 1px 0 #fff;
+  background-color: #f7f5fa;
+  border-radius: 5px;
 }
 
-.subnav .nav > li:first-child > a {
-  border-left: 0;
-  padding-left: 12px;
+/* All levels of nav */
+.bs-sidebar .nav > li > a {
+  display: block;
+  color: #716b7a;
+  padding: 5px 20px;
 }
-.subnav .nav > li:last-child > a {
-  border-right: 0;
+.bs-sidebar .nav > li > a:hover,
+.bs-sidebar .nav > li > a:focus {
+  text-decoration: none;
+  background-color: #e5e3e9;
+  border-right: 1px solid #dbd8e0;
 }
-
-/* Fixed subnav on scroll, but only for 980px and up (sorry IE!) */
-//@media (min-width: 980px) {
-.subnav-fixed {
-  background-color: #f5f5f5; 
-  border: 1px solid #ddd;
-  position: fixed;
-  margin-top: 0;
-  top: 0px;
-  left: 0;
-  right: 0;
-  z-index: 1030;
-  border-color: #d5d5d5;
-  border-width: 0 0 1px; /* drop the border on the fixed edges */
-  -webkit-border-radius: 0;
-     -moz-border-radius: 0;
-          border-radius: 0;
-  -webkit-box-shadow: inset 0 1px 0 #fff, 0 1px 5px rgba(0,0,0,.1);
-     -moz-box-shadow: inset 0 1px 0 #fff, 0 1px 5px rgba(0,0,0,.1);
-          box-shadow: inset 0 1px 0 #fff, 0 1px 5px rgba(0,0,0,.1);
-}
-.subnav-fixed .nav {
-  //width: 938px;
-  margin: 0 auto;
-  padding: 0 1px;
+.bs-sidebar .nav > .active > a,
+.bs-sidebar .nav > .active:hover > a,
+.bs-sidebar .nav > .active:focus > a {
+  font-weight: bold;
+  color: #111;
+  background-color: transparent;
+  border-right: 1px solid #111;
 }
 
-.subnav-fixed .nav > li > a {
-  border-left: 1px solid #f5f5f5;
-  border-right: 1px solid #e5e5e5;
-  -webkit-border-radius: 0;
-     -moz-border-radius: 0;
-          border-radius: 0;
+/* Nav: second level (shown on .active) */
+.bs-sidebar .nav .nav {
+  display: none; /* Hide by default, but at >768px, show it */
+  margin-bottom: 8px;
 }
-.subnav .nav > li:first-child > a,
-.subnav .nav > li:first-child > a:hover {
-//  -webkit-border-radius: 0;
-//     -moz-border-radius: 0;
-//          border-radius: 0;
+.bs-sidebar .nav .nav > li > a {
+  padding-top:    3px;
+  padding-bottom: 3px;
+  padding-left: 30px;
+  font-size: 90%;
 }
+
+/* Show and affix the side nav when space allows it */
+@media screen and (min-width: 992px) {
+  .bs-sidebar .nav > .active > ul {
+    display: block;
+  }
+  /* Widen the fixed sidebar */
+  .bs-sidebar.affix,
+  .bs-sidebar.affix-bottom {
+    width: 213px;
+  }
+  .bs-sidebar.affix {
+    position: fixed; /* Undo the static from mobile first approach */
+    top: 80px;
+  }
+  .bs-sidebar.affix-bottom {
+    position: absolute; /* Undo the static from mobile first approach */
+  }
+  .bs-sidebar.affix-bottom .bs-sidenav,
+  .bs-sidebar.affix .bs-sidenav {
+    margin-top: 0;
+    margin-bottom: 0;
+  }
+}
+@media screen and (min-width: 1070px) {
+  /* Widen the fixed sidebar again */
+  .bs-sidebar.affix-bottom,
+  .bs-sidebar.affix {
+    width: 233px;
+  }
+}
+
 
 /* ==========================================================================
    Responsive 
