--- a/public/js/apps/subnav/templates/layout.hbs
+++ b/public/js/apps/subnav/templates/layout.hbs
@@ -1,5 +1,12 @@
+<div class="bs-sidebar spy-nav" data-offset-top="200" data-spy="affix">
+    <ul class="nav bs-sidenav"></ul>
+</div>
+
+
+{{!
 <div class="subnav">
   <div class="container spy-nav">
     <ul class="nav nav-pills"></ul>
   </div>
 </div>
+}}
