fixed icons clicked not scrolling products page

--- a/views/home.jade
+++ b/views/home.jade
@@ -64,16 +64,14 @@
               .col-sm-6
                 //h5 Upcoming Shows
                 p.
-                  Coffee Fest NY<br>
+                  <a href="http://www.coffeefest.com">Coffee Fest NY</a><br>
                   March 7-9, 2014<br>
                   Jacob Javits Center<br>
-                  <a href="http://www.coffeefest.com">http://www.coffeefest.com</a>
               .col-sm-6
                 p.
-                  International Pizza Expo<br>
+                  <a href="http://www.pizzaexpo.com">International Pizza Expo</a><br>
                   March 24-27, 2014<br>
                   Las Vegas Convention Center<br>
-                  <a href="http://www.pizzaexpo.com">http://www.pizzaexpo.com</a>
               //- .col-sm-6.social-media
                 //- h5 Social Media
                 //- p.
