fixed loading on carousel links and fixed css import cat all files

--- a/views/home.jade
+++ b/views/home.jade
@@ -15,9 +15,9 @@
     .item
       img(src="/img/synesso-logo.jpg")
   //- Controls
-  a.left.carousel-control(href="#myCarousel" data-slide="prev")
+  a.left.carousel-control(href="#myCarousel" data-slide="prev" data-bypass="true")
     span.glyphicon.glyphicon-chevron-left
-  a.right.carousel-control(href="#myCarousel" data-slide="next")
+  a.right.carousel-control(href="#myCarousel" data-slide="next" data-bypass="true")
     span.glyphicon.glyphicon-chevron-right
 .icons
   .container
