--- a/public/fonts/icons/style.css
+++ b/public/fonts/icons/style.css
@@ -1,10 +1,10 @@
 @font-face {
 	font-family: 'icomoon';
-	src:url('fonts/icomoon.eot');
-	src:url('fonts/icomoon.eot?#iefix') format('embedded-opentype'),
-		url('fonts/icomoon.ttf') format('truetype'),
-		url('fonts/icomoon.woff') format('woff'),
-		url('fonts/icomoon.svg#icomoon') format('svg');
+	src:url('/fonts/icons/fonts/icomoon.eot');
+	src:url('/fonts/icons/fonts/icomoon.eot?#iefix') format('embedded-opentype'),
+		url('/fonts/icons/fonts/icomoon.ttf') format('truetype'),
+		url('/fonts/icons/fonts/icomoon.woff') format('woff'),
+		url('/fonts/icons/fonts/icomoon.svg#icomoon') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
@@ -62,9 +62,9 @@
 .fonticon-pizza-oven:before {
 	content: "\e60f";
 }
-.fonticon-logo-top:before {
+.fonticon-logo-bottom:before {
 	content: "\e605";
 }
-.fonticon-logo-bottom:before {
+.fonticon-logo-top:before {
 	content: "\e60c";
 }
