--- a/public/css/reale.less
+++ b/public/css/reale.less
@@ -5,9 +5,11 @@
 }
 
 #reale > .header {
-  #gradient > .horizontal(#fa143f, #fe5c08);
-  //#gradient > .horizontal(#FF143F, #fe5c08);
-
+  //#gradient > .horizontal(#fa143f, #fe5c08);
+  #gradient > .horizontal(@red, #fe5c08);
+  //background: @red;
+  //background: #fe5c08;
+  //background: #fc421b;
   height: 100%;
   overflow: hidden;
   position: relative;
