--- a/public/js/apps/manuals/templates/list_item.hbs
+++ b/public/js/apps/manuals/templates/list_item.hbs
@@ -1,9 +1,6 @@
-<embed src="/img/manuals/{{fileName}}" width="200" height="375">
-
-{{!<a href="/img/manuals/{{fileName}}">
+<a href="/img/manuals/{{fileName}}">
   <div class="thumbnail">
     <img alt="{{title}}" src="/img/manuals/{{thumb}}"/>
   </div>
   <div class="title">{{title}}</div>
 </a>
-}}
