--- a/views/reale/index.jade
+++ b/views/reale/index.jade
@@ -14,7 +14,7 @@ mixin nav
 
 mixin girl
   .girl
-    img.ht(src="/img/reale-banner-girl-opacity.png")
+    img.ht(src="/img/reale-girl-opacity.png")
 
 mixin scrollDown
   .scroll-down-wrap
