--- a/views/home.jade
+++ b/views/home.jade
@@ -56,28 +56,34 @@
   .hd
     .container
       .row
-        .col-sm-4
+        .col-sm-6
           .current-events
             h3 Upcoming Shows
             //- h3 Current Events
             .row
-              .col-sm-6
-                //h5 Upcoming Shows
+              .col-sm-4
                 p.
                   <a href="http://www.coffeefest.com">Coffee Fest NY</a><br>
                   March 7-9, 2014<br>
                   Jacob Javits Center<br>
-              .col-sm-6
+              .col-sm-4
                 p.
                   <a href="http://www.pizzaexpo.com">International Pizza Expo</a><br>
                   March 24-27, 2014<br>
                   Las Vegas Convention Center<br>
+              .col-sm-4
+                p.
+                  <a href="http://show.restaurant.org/Home">National Restaurant Show</a><br>
+                  May 17-20, 2014<br>
+                  McCormick Place <br>
+                  Chicago, IL
+
               //- .col-sm-6.social-media
                 //- h5 Social Media
                 //- p.
                   <a href="https://www.facebook.com/RositoBisani"><span class="fonticon-facebook"></span> Visit our Facebook page</a>
 
-        .col-sm-8
+        .col-sm-6
           .philosophy
             .RB-icon
             h3 Our Philosophy
